# rust-bear

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  client.rs  compile_commands.json  docker-compose.yaml  test.c
src/: lib.rs
src/lib/: Cargo.toml  lib.rs
src/macro/: Cargo.toml
src/schemas/: Cargo.toml  build.rs  lib.rs  schema.proto
src/server/: Cargo.toml  server.rs
testing/: Makefile  test.c
