[package]
name = "rust-bear-lib"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
libc = "0.2"
prost = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-bear-proto = { path = "../schemas" }

[lib]
crate-type = ["cdylib"]
bench = false
path = "lib.rs"
