[package]
name = "rust-bear"
version = "0.1.0"
edition = "2021"
build = "build.rs"
autobins = false

[dependencies]
libc = "0.2"
prost = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "2.0"
quote = "1.0"
# protobuf-src = "2.1.1"

[[lib]]
crate-type = ["cdylib"]
bench = false
path = "src/lib/lib.rs"
proc-macro = true

[[bin]]
name = "server"
path = "src/server/server.rs"

# [[bin]]
# name = "client"
# path = "client.rs"

[build-dependencies]
prost-build = "0.14.1"
protoc-bin-vendored = "3"
