[package]
name = "rust-bear-server"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
prost = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-bear-proto = { path = "../schemas" }
# protobuf-src = "2.1.1"

[[bin]]
name = "server"
path = "server.rs"
